--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   },
   "keywords": [
     "koa2",
-    "typescript"
+    "typescript",
+    "redis",
+    "mysql",
+    "session",
+    "mongoose",
+    "mongodb"
   ],
   "author": "jkhuangfu",
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "adm-zip": "^0.4.13",
+    "chokidar": "^3.3.1",
     "cross-env": "^6.0.3",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
@@ -27,26 +34,24 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "log4js": "^6.1.0",
+    "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
-    "nodemon": "^2.0.1",
     "redis": "^2.8.0",
     "typescript": "^3.7.3"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.32",
     "@types/koa": "^2.11.0",
     "@types/koa-router": "^7.0.42",
     "@types/koa-session": "^5.10.1",
     "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.4",
     "@types/log4js": "^2.3.5",
+    "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.12.14",
     "@types/redis": "^2.8.14",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.20.1"
-  },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": []
+  }
 }
