--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start-": "cross-env NODE_ENV=production pm2 start ./start.json",
     "build": "npm run lint && tsc",
     "dev": "cross-env NODE_ENV=development ts-node-dev src/app.ts",
-    "watch": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/app.ts",
-    "lint": "node_modules/tslint/bin/tslint --project tsconfig.json --config tslint.json",
-    "fix": "node_modules/tslint/bin/tslint --fix -c tslint.json ./src/**/*.ts"
+    "lint": "tslint --project tsconfig.json --config tslint.json",
+    "fix": "tslint --fix -c tslint.json ./src/**/*.ts"
   },
   "keywords": [
     "koa2",
@@ -52,7 +51,6 @@
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.12.14",
     "@types/redis": "^2.8.14",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "tslint": "^5.20.1"
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
