--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "adm-zip": "^0.4.13",
+    "axios": "^0.19.0",
     "chokidar": "^3.3.1",
     "cross-env": "^6.0.3",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
+    "koa-helmet": "^5.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
     "koa-static": "^5.0.0",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/koa": "^2.11.0",
+    "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.42",
     "@types/koa-session": "^5.10.1",
     "@types/koa-static": "^4.0.1",
