--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@types/uuid": "^3.4.6",
     "adm-zip": "^0.4.13",
     "axios": "^0.19.0",
     "chokidar": "^3.3.1",
@@ -42,7 +43,8 @@
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
     "redis": "^2.8.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
