--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
     "redis": "^2.8.0",
+    "svg-captcha": "^1.4.0",
     "typescript": "^3.7.3",
     "uuid": "^3.3.3"
   },
