--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "copy": "copyfiles -f ./src/views/* ./build/views",
     "clean": "rimraf build/*",
     "dev": "cross-env NODE_ENV=development ts-node-dev src/app.ts",
+    "debug": "cross-env NODE_ENV=production ts-node-dev src/app.ts",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "fix": "tslint --fix -c tslint.json ./src/**/*.ts"
   },
@@ -31,6 +32,7 @@
     "axios": "^0.19.0",
     "chokidar": "^3.3.1",
     "cross-env": "^6.0.3",
+    "ejs": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
@@ -42,13 +44,16 @@
     "log4js": "^6.1.0",
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
+    "raw-body": "^2.4.1",
     "redis": "^2.8.0",
     "svg-captcha": "^1.4.0",
     "typescript": "^3.7.3",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
+    "@types/ejs": "^3.0.1",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/koa": "^2.11.0",
     "@types/koa-helmet": "^3.1.2",
@@ -56,11 +61,13 @@
     "@types/koa-session": "^5.10.1",
     "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.4",
+    "@types/koa__cors": "^3.0.1",
     "@types/log4js": "^2.3.5",
     "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.12.14",
     "@types/redis": "^2.8.14",
+    "@types/xml2js": "^0.4.5",
     "copyfiles": "^2.1.1",
     "rimraf": "^3.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
