--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "log4js": "^6.1.0",
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.5",
     "raw-body": "^2.4.1",
     "redis": "^2.8.0",
     "svg-captcha": "^1.4.0",
@@ -66,6 +67,7 @@
     "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.12.14",
+    "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.14",
     "@types/xml2js": "^0.4.5",
     "copyfiles": "^2.1.1",
