--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/uuid": "^3.4.6",
     "adm-zip": "^0.4.13",
     "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.3.1",
     "cross-env": "^6.0.3",
     "ejs": "^3.0.1",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
+    "@types/cheerio": "^0.22.17",
     "@types/ejs": "^3.0.1",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/koa": "^2.11.0",
