--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "使用typescript开发koa2",
   "main": "app.ts",
   "scripts": {
-    "start": "cross-env NODE_ENV=production pm2 start ./start.json",
+    "start": "cross-env NODE_ENV=production npm run build && pm2 start ./start.json",
     "build": "npm run lint && npm run clean && tsc && npm run copy",
     "copy": "copyfiles -f ./src/views/* ./build/views",
     "clean": "rimraf build/*",
@@ -43,6 +43,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "log4js": "^6.1.0",
+    "memory-cache": "^0.2.0",
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.5",
@@ -66,6 +67,7 @@
     "@types/koa-views": "^2.0.4",
     "@types/koa__cors": "^3.0.1",
     "@types/log4js": "^2.3.5",
+    "@types/memory-cache": "^0.2.1",
     "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.12.14",
