--- a/package.json
+++ b/package.json
@@ -27,19 +27,18 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "@types/uuid": "^3.4.6",
     "adm-zip": "^0.4.13",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.3.1",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.2",
     "ejs": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-helmet": "^5.2.0",
-    "koa-router": "^7.4.0",
-    "koa-session": "^5.12.3",
+    "koa-router": "^8.0.8",
+    "koa-session": "^6.0.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "log4js": "^6.1.0",
@@ -48,19 +47,22 @@
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.5",
     "raw-body": "^2.4.1",
-    "redis": "^2.8.0",
+    "redis": "^3.0.2",
     "svg-captcha": "^1.4.0",
     "typescript": "^3.7.3",
-    "uuid": "^3.3.3",
-    "xml2js": "^0.4.23"
+    "uuid": "^7.0.3",
+    "xml2js": "^0.4.23",
+    "copyfiles": "^2.1.1",
+    "rimraf": "^3.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^7.0.3",
     "@types/adm-zip": "^0.4.32",
     "@types/cheerio": "^0.22.17",
     "@types/ejs": "^3.0.1",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/koa": "^2.11.0",
-    "@types/koa-helmet": "^3.1.2",
+    "@types/koa-helmet": "^5.2.0",
     "@types/koa-router": "^7.0.42",
     "@types/koa-session": "^5.10.1",
     "@types/koa-static": "^4.0.1",
@@ -70,13 +72,11 @@
     "@types/memory-cache": "^0.2.1",
     "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
-    "@types/node": "^12.12.14",
+    "@types/node": "^13.13.4",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.14",
     "@types/xml2js": "^0.4.5",
-    "copyfiles": "^2.1.1",
-    "rimraf": "^3.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
-    "tslint": "^5.20.1"
+    "tslint": "^6.1.2"
   }
 }
