--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "adm-zip": "^0.4.13",
+    "ali-oss": "^6.9.0",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.3.1",
+    "copyfiles": "^2.1.1",
     "cross-env": "^7.0.2",
     "ejs": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -48,16 +50,15 @@
     "nodemailer": "^6.4.5",
     "raw-body": "^2.4.1",
     "redis": "^3.0.2",
+    "rimraf": "^3.0.0",
     "svg-captcha": "^1.4.0",
     "typescript": "^3.7.3",
     "uuid": "^7.0.3",
-    "xml2js": "^0.4.23",
-    "copyfiles": "^2.1.1",
-    "rimraf": "^3.0.0"
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@types/uuid": "^7.0.3",
     "@types/adm-zip": "^0.4.32",
+    "@types/ali-oss": "^6.0.5",
     "@types/cheerio": "^0.22.17",
     "@types/ejs": "^3.0.1",
     "@types/jsonwebtoken": "^8.3.5",
@@ -75,6 +76,7 @@
     "@types/node": "^13.13.4",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.14",
+    "@types/uuid": "^7.0.3",
     "@types/xml2js": "^0.4.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.2"
