--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "raw-body": "^2.4.1",
     "redis": "^3.0.2",
     "rimraf": "^3.0.0",
+    "socket.io": "^2.3.0",
     "svg-captcha": "^1.4.0",
     "typescript": "^3.7.3",
     "uuid": "^8.2.0",
@@ -78,6 +79,7 @@
     "@types/node": "^14.0.23",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.14",
+    "@types/socket.io": "^2.1.8",
     "@types/uuid": "^8.0.0",
     "@types/xml2js": "^0.4.5",
     "ts-node-dev": "1.0.0-pre.44",
