--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/koa__cors": "^3.0.1",
     "@types/log4js": "^2.3.5",
     "@types/memory-cache": "^0.2.1",
+    "@types/module-alias": "^2.0.0",
     "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
     "@types/node": "^14.0.23",
@@ -82,7 +83,11 @@
     "@types/socket.io": "^2.1.8",
     "@types/uuid": "^8.0.0",
     "@types/xml2js": "^0.4.5",
+    "module-alias": "^2.2.2",
     "ts-node-dev": "1.0.0-pre.44",
     "tslint": "^6.1.2"
+  },
+  "_moduleAliases": {
+    "@": "src"
   }
 }
