-fix:修复打包后路径错误问题

--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "1.0.0",
   "description": "使用typescript开发koa2",
   "main": "app.ts",
+  "scriptsDescription": {
+    "start-online": "生产环境启动脚本(打包后的build文件夹执行)",
+    "start-dev": "本地环境启动脚本(打包后的build文件夹执行)",
+    "build": "打包",
+    "copy": "复制非ts文件到打包目录",
+    "clean": "清理打包目录",
+    "dev": "本地数据环境开发启动",
+    "debug": "连接生产数据进行启动",
+    "lint": "tslint检验",
+    "fix": "tslint修复"
+  },
   "scripts": {
-    "start": "cross-env NODE_ENV=production npm run build && pm2 start ./start.json",
+    "start-online": "cross-env NODE_ENV=production pm2 start ./start.json",
+    "start-dev": "cross-env NODE_ENV=development pm2 start ./start.json",
     "build": "npm run lint && npm run clean && tsc && npm run copy",
-    "copy": "copyfiles -f ./src/views/* ./build/views",
-    "clean": "rimraf build/*",
+    "copy": "copyfiles -F  ./src/views/**/**/**/**/**/* ./build/ ./src/public/**/**/**/**/**/**/* ./build/ package.json ./build start.json ./build",
+    "clean": "rimraf ./build",
     "dev": "cross-env NODE_ENV=development ts-node-dev src/app.ts",
     "debug": "cross-env NODE_ENV=production ts-node-dev src/app.ts",
     "lint": "tslint --project tsconfig.json --config tslint.json",
@@ -47,6 +59,7 @@
     "koa-views": "^6.2.1",
     "log4js": "^6.1.0",
     "memory-cache": "^0.2.0",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.5",
@@ -83,7 +96,6 @@
     "@types/socket.io": "^2.1.8",
     "@types/uuid": "^8.0.0",
     "@types/xml2js": "^0.4.5",
-    "module-alias": "^2.2.2",
     "ts-node-dev": "1.0.0-pre.44",
     "tslint": "^6.1.2"
   },
