:arrow_up:升级ts配置支持”可选链操作符“ :zap: 优化全局描述文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "target": "ESNEXT",
-    "module": "commonjs",
+    "target": "ES2019",
+    "module": "CommonJS",
     "removeComments": true,
     "outDir": "./build/src",
     "strict": true,
