--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "adm-zip": "^0.4.13",
     "ali-oss": "^6.10.0",
     "axios": "^0.19.0",
+    "bull": "^3.18.0",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.3.1",
     "copyfiles": "^2.1.1",
@@ -59,7 +60,6 @@
     "mongoose": "^5.8.3",
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.5",
-    "raw-body": "^2.4.1",
     "redis": "^3.0.2",
     "rimraf": "^3.0.0",
     "socket.io": "^2.3.0",
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/ali-oss": "^6.0.5",
+    "@types/bull": "^3.14.2",
     "@types/cheerio": "^0.22.17",
     "@types/ejs": "^3.0.1",
     "@types/jsonwebtoken": "^8.3.5",
@@ -82,7 +83,6 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.4",
     "@types/koa__cors": "^3.0.1",
-    "@types/log4js": "^2.3.5",
     "@types/module-alias": "^2.0.0",
     "@types/mongoose": "^5.5.35",
     "@types/mysql": "^2.15.8",
