--- a/package.json
+++ b/package.json
@@ -61,10 +61,8 @@
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.5",
     "redis": "^3.0.2",
-    "rimraf": "^3.0.0",
     "socket.io": "^2.3.0",
     "svg-captcha": "^1.4.0",
-    "typescript": "^4.0.2",
     "uuid": "^8.2.0",
     "websocket": "^1.0.31",
     "xml2js": "^0.4.23"
@@ -93,8 +91,10 @@
     "@types/uuid": "^8.0.0",
     "@types/websocket": "^1.0.1",
     "@types/xml2js": "^0.4.5",
+    "rimraf": "^3.0.2",
     "ts-node-dev": "^1.0.0-pre.56",
-    "tslint": "^6.1.2"
+    "tslint": "^6.1.2",
+    "typescript": "^4.0.3"
   },
   "_moduleAliases": {
     "@": "src"
