--- a/package.json
+++ b/package.json
@@ -38,62 +38,63 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "adm-zip": "^0.5.0",
-    "ali-oss": "^6.11.2",
-    "axios": "^0.21.0",
-    "bull": "^3.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "chokidar": "^3.4.3",
-    "copyfiles": "^2.4.0",
-    "cross-env": "^7.0.2",
-    "ejs": "^3.1.5",
+    "adm-zip": "^0.5.3",
+    "ali-oss": "^6.13.2",
+    "axios": "^0.21.1",
+    "bull": "^3.20.1",
+    "cheerio": "^1.0.0-rc.5",
+    "chokidar": "^3.5.1",
+    "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
+    "ejs": "^3.1.6",
     "jsonwebtoken": "^8.5.1",
-    "koa": "^2.13.0",
+    "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-helmet": "^6.0.0",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.3.1",
+    "koa-views": "^7.0.0",
     "log4js": "^6.3.0",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.10.15",
+    "mongoose": "^5.11.18",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.16",
+    "nodemailer": "^6.4.18",
     "redis": "^3.0.2",
-    "socket.io": "^2.3.0",
+    "socket.io": "^3.1.1",
+    "sqlite3": "^5.0.2",
     "svg-captcha": "^1.4.0",
-    "uuid": "^8.3.1",
-    "websocket": "^1.0.32",
+    "uuid": "^8.3.2",
+    "websocket": "^1.0.33",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.33",
-    "@types/ali-oss": "^6.0.5",
-    "@types/bull": "^3.14.4",
-    "@types/cheerio": "^0.22.22",
-    "@types/ejs": "^3.0.5",
+    "@types/ali-oss": "^6.0.7",
+    "@types/bull": "^3.15.0",
+    "@types/cheerio": "^0.22.24",
+    "@types/ejs": "^3.0.6",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa-helmet": "^6.0.1",
+    "@types/koa-helmet": "^6.0.2",
     "@types/koa-router": "^7.4.1",
     "@types/koa-session": "^5.10.3",
     "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.4",
     "@types/koa__cors": "^3.0.2",
     "@types/module-alias": "^2.0.0",
-    "@types/mongoose": "^5.10.1",
-    "@types/mysql": "^2.15.15",
-    "@types/node": "^14.14.9",
+    "@types/mongoose": "^5.10.3",
+    "@types/mysql": "^2.15.17",
+    "@types/node": "^14.14.31",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
-    "@types/socket.io": "^2.1.11",
+    "@types/socket.io": "^2.1.13",
     "@types/uuid": "^8.3.0",
     "@types/websocket": "^1.0.1",
-    "@types/xml2js": "^0.4.7",
+    "@types/xml2js": "^0.4.8",
     "rimraf": "^3.0.2",
-    "ts-node-dev": "^1.0.0",
+    "ts-node-dev": "^1.1.2",
     "tslint": "^6.1.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.2"
   },
   "_moduleAliases": {
     "@": "src"
