--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run lint && npm run clean && tsc && npm run copy && node ./build.js",
     "copy": "copyfiles package.json ./build start.json ./build yarn.lock ./build",
     "clean": "rimraf ./build",
-    "dev": "cross-env NODE_ENV=development ts-node-dev --transpile-only src/app.ts",
+    "dev": "cross-env NODE_ENV=development time ts-node-dev --transpile-only src/app.ts",
     "debug": "cross-env NODE_ENV=production ts-node-dev --transpile-only src/app.ts",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "fix": "tslint --fix -c tslint.json ./src/**/*.ts"
@@ -28,8 +28,6 @@
     "redis",
     "mysql",
     "session",
-    "mongoose",
-    "mongodb",
     "jsonwentoken",
     "log4js",
     "soccket"
@@ -54,15 +52,14 @@
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^7.0.0",
+    "koa-views": "^7.0.1",
     "log4js": "^6.3.0",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.11.18",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.18",
     "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^3.1.1",
-    "sqlite3": "^5.0.2",
     "svg-captcha": "^1.4.0",
     "uuid": "^8.3.2",
     "websocket": "^1.0.33",
@@ -82,7 +79,6 @@
     "@types/koa-views": "^2.0.4",
     "@types/koa__cors": "^3.0.2",
     "@types/module-alias": "^2.0.0",
-    "@types/mongoose": "^5.10.3",
     "@types/mysql": "^2.15.17",
     "@types/node": "^14.14.31",
     "@types/nodemailer": "^6.4.0",
