--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build": "npm run lint && npm run clean && tsc && npm run copy && node ./build.js",
     "copy": "copyfiles package.json ./build start.json ./build yarn.lock ./build",
     "clean": "rimraf ./build",
-    "dev": "cross-env NODE_ENV=development time ts-node-dev --transpile-only src/app.ts",
-    "debug": "cross-env NODE_ENV=production ts-node-dev --transpile-only src/app.ts",
+    "dev": "cross-env NODE_ENV=development  tsnd --transpile-only src/app.ts",
+    "debug": "cross-env NODE_ENV=production tsnd --transpile-only src/app.ts",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "fix": "tslint --fix -c tslint.json ./src/**/*.ts",
     "update": "./node_modules/.bin/yarn-upgrade-all"
@@ -59,9 +59,9 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.0.0",
     "sqlite3": "^5.0.2",
-    "reflect-metadata": "^0.1.13",
     "svg-captcha": "^1.4.0",
     "uuid": "^8.3.2",
     "websocket": "^1.0.33",
