--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "log4js": "^6.3.0",
     "module-alias": "^2.2.2",
     "mysql": "^2.18.1",
+    "node-qpdf2": "^3.0.0",
     "nodemailer": "^6.5.0",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
