--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "target": "ES2019",
+    "target": "ESNext",
     "module": "CommonJS",
     "removeComments": true,
     "outDir": "./build/src",
@@ -13,7 +13,8 @@
     "esModuleInterop": false /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "typings/**/*.d.ts"]
 }
